<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        app:endIconMode="clear_text"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@id/tv_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="@dimen/dimens_8dp"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:text="email@nah.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/til_email"
        app:layout_constraintStart_toStartOf="@id/til_email"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="@dimen/dimens_8dp"
            android:hint="@string/text_pwd"
            android:inputType="textPassword"
            tools:text="123123" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:enabled="false"
        android:padding="@dimen/dimens_16dp"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="@id/til_pwd"
        app:layout_constraintStart_toStartOf="@id/til_pwd"
        app:layout_constraintTop_toBottomOf="@id/til_pwd" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/text_or"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:padding="@dimen/dimens_16dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@id/tv_signup"
        app:layout_constraintStart_toStartOf="@id/tv_signup"
        app:layout_constraintTop_toBottomOf="@id/tv_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>