<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit.DetailRoleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_16dp"
            app:endIconMode="clear_text"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_alternate_email_24"
                android:drawablePadding="@dimen/dimens_8dp"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:text="email@nah.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pwd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/til_email"
            app:layout_constraintStart_toStartOf="@id/til_email"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="@dimen/dimens_8dp"
                android:hint="@string/text_pwd"
                android:inputType="textPassword"
                tools:text="123123" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_16dp"
            app:endIconMode="clear_text"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/til_pwd"
            app:layout_constraintStart_toStartOf="@id/til_pwd"
            app:layout_constraintTop_toBottomOf="@id/til_pwd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="@dimen/dimens_8dp"
                android:hint="@string/text_username"
                android:inputType="textPersonName"
                tools:text="123123" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_role"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_16dp"
            app:endIconMode="dropdown_menu"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/til_username"
            app:layout_constraintStart_toStartOf="@id/til_username"
            app:layout_constraintTop_toBottomOf="@id/til_username">

            <AutoCompleteTextView
                android:id="@+id/et_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="@dimen/dimens_8dp"
                android:hint="@string/text_role"
                android:inputType="none"
                tools:text="123123" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_16dp"
            android:padding="@dimen/dimens_16dp"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="@id/til_role"
            app:layout_constraintStart_toStartOf="@id/til_role"
            app:layout_constraintTop_toBottomOf="@id/til_role" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_16dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:padding="@dimen/dimens_16dp"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="@id/btn_update"
            app:layout_constraintStart_toStartOf="@id/btn_update"
            app:layout_constraintTop_toBottomOf="@id/btn_update" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>